[package]
name = "example_printnets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "example_printnets"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
nextpnr = { path = "../nextpnr" }
